1999-02-26  Jim Kingdon  <http://www.cyclic.com>

	* options.h: Make RELATIVE_REPOS the default, as in
	../src/options.h.in.

1998-10-13  Jim Kingdon

	* README: Update information about make/project files, cygwin and
	the (lack of) need for RCS 5.7.  Tweak a few more things.

1998-10-03  Jim Kingdon

	* win32.c: Include cvs.h and only check server_active if
	SERVER_SUPPORT is defined.

1998-10-02  Jim Kingdon  <kingdon@harvey.cyclic.com>

	(This was reported by someone else but I don't remember who).
	* config.h: Define SYSTEM_CLEANUP.
	* win32.c (wnt_cleanup): New function, implements it.

1998-09-28  Johannes Stezenbach <johannes.stezenbach@propack-data.de>
	    and Jim Kingdon

	* config.h (CVS_RENAME): Define.
	* filesubr.c, config.h (wnt_rename): New function.
	* filesubr.c (rename_file): Call CVS_RENAME not rename.

1998-09-04  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* win32.c (gethostname): Expand comment about gethostname
	vs. GetComputerName (reported by Randy Coulman).

1998-07-01  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* startserver.c (wnt_shutdown_server): Check for errors from close().

1998-06-30  Noel Cragg

    * startserver.c: add a global variable which notes if we've opened
	a socket.  Since the code in client.c will call wnt_shutdown_server
	regardless of which client method we've selected, we need to make
	sure and not call shutdown or closesocket on a pipe (it won't work).
	(wnt_shutdown_server): use the new global to decide whether or not
	to call socket routines or simply use close.
	

1998-06-11  Jim Kingdon

	* config.h (CVS_STAT, CVS_LSTAT): Define.
	* filesubr.c, config.h (wnt_stat, wnt_lstat, check_statbuf):
	New functions.

1998-04-09  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (link_file): Remove; no longer used.

Tue Feb 17 02:31:41 1998  Noel Cragg  <noel@swish.red-bean.com>

	* filesubr.c (last_component): return the top-level directory when
 	asked about the top-level directory.
