@@ -2,6 +2,7 @@
 
 	* options.h: Make RELATIVE_REPOS the default, as in
 	../src/options.h.in.
+	Remove CVS_DIFFDATE; removed from CVS on 27 Jun 1996.
 
 1998-10-13  Jim Kingdon
 
